bk_ida/gccida/c0/finish_init
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/finish_init/src/c-typeck.c:5599:5: error: use of undeclared identifier 'initializer_stack_0'; did you mean 'initializer_stack'?
p = initializer_stack_0; 
    ^~~~~~~~~~~~~~~~~~~
    initializer_stack
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/finish_init/src/c-typeck.c:5059:27: note: 'initializer_stack' declared here
struct initializer_stack *initializer_stack;
                          ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/finish_init/src/c-typeck.c:5602:9: error: use of undeclared identifier 'constructor_stack_0'; did you mean 'constructor_stack'?
while ( constructor_stack_0 ) 
        ^~~~~~~~~~~~~~~~~~~
        constructor_stack
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/finish_init/src/c-typeck.c:5021:27: note: 'constructor_stack' declared here
struct constructor_stack *constructor_stack;
                          ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/finish_init/src/c-typeck.c:5604:5: error: use of undeclared identifier 'constructor_stack_0'; did you mean 'constructor_stack'?
q = constructor_stack_0; 
    ^~~~~~~~~~~~~~~~~~~
    constructor_stack
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/finish_init/src/c-typeck.c:5021:27: note: 'constructor_stack' declared here
struct constructor_stack *constructor_stack;
                          ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/finish_init/src/c-typeck.c:5605:1: error: use of undeclared identifier 'constructor_stack_0'; did you mean 'constructor_stack'?
constructor_stack_0 = constructor_stack_0->next; 
^~~~~~~~~~~~~~~~~~~
constructor_stack
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/finish_init/src/c-typeck.c:5021:27: note: 'constructor_stack' declared here
struct constructor_stack *constructor_stack;
                          ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/finish_init/src/c-typeck.c:5605:23: error: use of undeclared identifier 'constructor_stack_0'; did you mean 'constructor_stack'?
constructor_stack_0 = constructor_stack_0->next; 
                      ^~~~~~~~~~~~~~~~~~~
                      constructor_stack
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/finish_init/src/c-typeck.c:5021:27: note: 'constructor_stack' declared here
struct constructor_stack *constructor_stack;
                          ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/finish_init/src/c-typeck.c:5608:6: error: use of undeclared identifier 'constructor_range_stack_0'; did you mean 'constructor_range_stack'?
if ( constructor_range_stack_0 ) 
     ^~~~~~~~~~~~~~~~~~~~~~~~~
     constructor_range_stack
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/finish_init/src/c-typeck.c:5036:33: note: 'constructor_range_stack' declared here
struct constructor_range_stack *constructor_range_stack;
                                ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/finish_init/src/c-typeck.c:5614:1: error: use of undeclared identifier 'constructor_stack_0'; did you mean 'constructor_stack'?
constructor_stack_0 = p->constructor_stack; 
^~~~~~~~~~~~~~~~~~~
constructor_stack
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/finish_init/src/c-typeck.c:5021:27: note: 'constructor_stack' declared here
struct constructor_stack *constructor_stack;
                          ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/finish_init/src/c-typeck.c:5615:1: error: use of undeclared identifier 'constructor_range_stack_0'; did you mean 'constructor_range_stack'?
constructor_range_stack_0 = p->constructor_range_stack; 
^~~~~~~~~~~~~~~~~~~~~~~~~
constructor_range_stack
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/finish_init/src/c-typeck.c:5036:33: note: 'constructor_range_stack' declared here
struct constructor_range_stack *constructor_range_stack;
                                ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/finish_init/src/c-typeck.c:5617:1: error: use of undeclared identifier 'spelling_0'; did you mean 'spelling'?
spelling_0 = p->spelling; 
^~~~~~~~~~
spelling
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/finish_init/src/c-typeck.c:4491:25: note: 'spelling' declared here
static struct spelling *spelling;       /* Next stack element (unused).  */
                        ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/finish_init/src/c-typeck.c:5622:1: error: use of undeclared identifier 'initializer_stack_0'; did you mean 'initializer_stack'?
initializer_stack_0 = p->next; 
^~~~~~~~~~~~~~~~~~~
initializer_stack
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/finish_init/src/c-typeck.c:5059:27: note: 'initializer_stack' declared here
struct initializer_stack *initializer_stack;
                          ^
10 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/finish_init/src/obj/c-typeck.o] Error 1
